# db-viewer-python

./: README.md  install.sh  pyproject.toml  update.sh
docs/: DEV_SETUP.md  PRODUCTION_SETUP.md  SPECS_V1.0.md  WORKLOG_V1.0.0.md  WORKLOG_V1.0.1.md  WORKLOG_V1.0.2.md  WORKLOG_V1.0.3.md
src/dbviewer/: api.py  auth.py  cli.py  code_generator.py  config.py  excel_export.py  name_helper.py  schema_diff.py  server.py  service.py  sql_tokenizer.py
src/dbviewer/drivers/: __init__.py  base.py  mssql.py  mysql.py  postgres.py  sqlite.py
src/dbviewer/static/: index.html
tests/: test_api.py  test_auth.py  test_code_generator.py  test_drivers.py  test_excel_export.py  test_integration_sqlite.py  test_name_helper.py  test_schema_diff.py  test_v101.py  test_v102.py  test_v103.py
